--- a/src/PageOfBob.Parsing.Compiled/PageOfBob.Parsing.Compiled.csproj
+++ b/src/PageOfBob.Parsing.Compiled/PageOfBob.Parsing.Compiled.csproj
@@ -3,13 +3,13 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <PackageId>PageOfBob.Parsing.Compiled</PackageId>
-    <PackageVersion>1.0.0-alpha0</PackageVersion>
+    <PackageVersion>1.0.0-alpha1</PackageVersion>
     <Version>1.0.0</Version>
     <Authors>Bob Davidson</Authors>
     <Description>Tiny, experimental library for generating parsers in C#</Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageReleaseNotes>
-      Initial alpha release
+      Added some rules
     </PackageReleaseNotes>
     <Copyright>Copyright 2017 (c) Bob Davidson. All rights reserved.</Copyright>
     <PackageTags>parse parsing</PackageTags>
