--- a/src/PageOfBob.Parsing.Compiled/PageOfBob.Parsing.Compiled.csproj
+++ b/src/PageOfBob.Parsing.Compiled/PageOfBob.Parsing.Compiled.csproj
@@ -3,13 +3,13 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <PackageId>PageOfBob.Parsing.Compiled</PackageId>
-    <PackageVersion>1.0.0-alpha1</PackageVersion>
+    <PackageVersion>1.0.0-alpha2</PackageVersion>
     <Version>1.0.0</Version>
     <Authors>Bob Davidson</Authors>
     <Description>Tiny, experimental library for generating parsers in C#</Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageReleaseNotes>
-      Added some rules
+      Reorganized API
     </PackageReleaseNotes>
     <Copyright>Copyright 2017 (c) Bob Davidson. All rights reserved.</Copyright>
     <PackageTags>parse parsing</PackageTags>
@@ -18,6 +18,10 @@
     <RepositoryUrl>https://github.com/mrdrbob/PageOfBob.Parsing.Compiled</RepositoryUrl>
     <PackageLicenseUrl>https://github.com/mrdrbob/PageOfBob.Parsing.Compiled/blob/master/LICENSE</PackageLicenseUrl>
     <PackageTags>parsing</PackageTags>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <LangVersion>default</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
