--- a/tests/PageOfBob.Parsing.Compiled.Tests/PageOfBob.Parsing.Compiled.Tests.csproj
+++ b/tests/PageOfBob.Parsing.Compiled.Tests/PageOfBob.Parsing.Compiled.Tests.csproj
@@ -6,6 +6,10 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <LangVersion>default</LangVersion>
+  </PropertyGroup>
+
   <ItemGroup>
     <None Remove="example.csv" />
   </ItemGroup>
